--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -14,3 +14,25 @@
 // To declare rules for a specific mode, create a child rule
 // for the .md, .ios, or .wp mode classes. The mode class is
 // automatically applied to the <body> element in the app.
+
+$color-black: #000;
+$color-white: #fff;
+$color-primary: #d93a00;
+$color-secondary: #1870f4;
+$color-tertiary: #131f23;
+$color-tone-1: #131313;
+$color-tone-2: #434343;
+$color-tone-3: #acacac;
+$color-tone-4: #e4e4e4;
+$color-tone-5: #f2f2f2;
+$color-tone-6: #f8f8f8;
+$color-tone-7: #fff;
+$color-1: #6a5cff;
+$color-2: #8f7407;
+$color-3: #d93a00;
+$color-4: #0e8a00;
+$color-5: #008675;
+$color-6: #dbaf00;
+$color-7: #e00096;
+
+
