--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,3 +1,11 @@
-page-home {
+@import '../../app/app.scss';
 
+page-home {
+    .toolbar-title-md {
+        color: $color-black;
+    }
+    .toolbar-background-md {
+        background-color: $color-tone-5;
+        border-color: $color-tone-4;
+    }
 }
